[package]
name = "JobSync"
version = "0.1.0"
authors = ["Jovi Hsu <jv.hsu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.0"

http = "0.2"
httparse = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json =  {version = "1.0", default-features = false, features = ["alloc"]}

bytes = "0.5"
base64 = "0.11.0"

env_logger = "0.7.1"
log = "0.4.0"

time = "0.1"
config = "0.9.0"
lazy_static = "1.4.0"
lettre = "0.9"
tokio-postgres = {version = "0.5.2", features = ["with-chrono-0_4"]}
chrono = "0.4"


reqwest = { version = "0.10", features = ["json"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
